<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="io.github.fuadreza.moviecatalogue.data.DetailEntity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                tools:context=".ui.detail.movies.DetailMovieActivity">

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@color/purple_700"
                    android:contentDescription="@string/content_image" />

                <TextView
                    android:id="@+id/labelTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/title"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@id/tvTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivPoster" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{movie.title}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/labelReleaseYear"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/labelTitle"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/labelReleaseYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/release_year"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@id/tvReleaseYear"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/labelTitle" />

                <TextView
                    android:id="@+id/tvReleaseYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{movie.releaseYear}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/tvTagline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/labelReleaseYear"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/tvTagline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{movie.tagline}"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@id/ivPoster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    tools:text="@tools:sample/lorem" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/containerCard"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@id/ivPoster">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/containerGenre"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="bottom"
                            android:orientation="vertical"
                            android:paddingHorizontal="4dp"
                            tools:background="@color/snow">

                            <TextView
                                android:id="@+id/tvGenre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="16sp"
                                tools:text="@tools:sample/lorem" />

                            <TextView
                                android:id="@+id/labelGenre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="24dp"
                                android:text="@string/genre"
                                android:textAlignment="center"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="8dp"
                            android:background="@color/light_grey" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="8dp"
                            android:background="@color/light_grey" />

                        <LinearLayout
                            android:id="@+id/containerScore"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="bottom"
                            android:orientation="vertical"
                            android:paddingHorizontal="4dp"
                            tools:background="@color/snow">

                            <TextView
                                android:id="@+id/tvScore"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{movie.popularity}"
                                android:textAlignment="center"
                                android:textSize="24sp"
                                tools:text="16" />

                            <TextView
                                android:id="@+id/labelScore"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="24dp"
                                android:text="@string/score"
                                android:textAlignment="center"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/labelOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/overview"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintTop_toBottomOf="@id/containerCard" />

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/labelOverview"
                    android:text="@{movie.overview}"
                    tools:text="@tools:sample/lorem/random" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>